--- a/rules
+++ b/rules
@@ -9,6 +9,8 @@ alert tcp any any -> any 80 (msg: "Order by SQL Injection"; content: "order" ; s
 alert tcp any any -> any 80 (msg: "UNION SELECT SQL Injection"; content: "union" ; sid:1000006; )
 
 alert tcp $EXTERNAL_NET any -> $HOME_NET 22 (msg: "Brute Force Detected"; sid:10; rev:1;)
+alert tcp $EXTERNAL_NET any -> $HOME_NET 22 (msg:"Possible SSH brute forcing!"; flags: S+; threshold: type both, track by_src, count 5, seconds 30; sid:10000001; rev: 1;)
+
 
 alert tcp any any -> any any (msg:"XSS Attack:"; content:"script"; sid:10000007;rev:002;)
 alert tcp any any -> $HOME_NET any (msg:"XSS Attack:"; content:"img"; sid:10000002;rev:002;)
